plugins {
    `java-gradle-plugin`
}

repositories {
    mavenCentral()
}

dependencies {
    implementation("org.ow2.asm:asm-tree:9.4")
    implementation("io.github.juuxel:adorn-data-generator")
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

gradlePlugin {
    plugins {
        register("adorn-data-generator") {
            id = "adorn-data-generator"
            implementationClass = "juuxel.adorn.gradle.DataGeneratorPlugin"
        }

        register("adorn-data-generator.emi") {
            id = "adorn-data-generator.emi"
            implementationClass = "juuxel.adorn.gradle.EmiDataGeneratorPlugin"
        }

        register("adorn-service-inline") {
            id = "adorn-service-inline"
            implementationClass = "juuxel.adorn.gradle.ServiceInlinePlugin"
        }
    }
}
